--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
-  "workspace.library": ["path/to/library/directory"],
-  "runtime.version": "Lua 5.3",
-  "hint.enable": false
+  "workspace.library": ["C:\\Mods\\cet\\", "C:\\Mods\\imgui\\"],
+  "runtime.version": "Lua 5.4"
 }
